public class Persona {
    private String nombre;
    private String apellido;
    private String dni;
    private int edad;
    private String email;
    private String telefono;
    public void Persona(String nombre, String apellido, String dni, int edad, String email, String telefono) {
        // TODO: Implementar el método
    }
    public String getNombre() {
        // TODO: Implementar el método
    }
    public void setNombre(String nombre) {
        // TODO: Implementar el método
    }
    public String getApellido() {
        // TODO: Implementar el método
    }
    public void setApellido(String apellido) {
        // TODO: Implementar el método
    }
    public String getDni() {
        // TODO: Implementar el método
    }
    public void setDni(String dni) {
        // TODO: Implementar el método
    }
    public int getEdad() {
        // TODO: Implementar el método
    }
    public void setEdad(int edad) {
        // TODO: Implementar el método
    }
    public String getEmail() {
        // TODO: Implementar el método
    }
    public void setEmail(String email) {
        // TODO: Implementar el método
    }
    public String getTelefono() {
        // TODO: Implementar el método
    }
    public void setTelefono(String telefono) {
        // TODO: Implementar el método
    }
    public void mostrarInformacion() {
        // TODO: Implementar el método
    }
}
