' Generated by UML Generator
' Encoded: jLZBRXit5DthAxYKOmdesWY2EB036B03eKwwARgWPXYLA8USaXoZoEEZ-WtziLvo-BWaHqgKm1jPkk_7kRoaNnjBjPq6iJ9_SJbIJGVI2MhCjRMQxoVBxZeb7_adHdvP_SbxHZgkEy5MAoz5tl2zuCgoZfBFAqAsKWrxpQx88sZBWwFqNBEkuqfYeg6WVKNkkR4l7-7xAqSKVAzLfDwx7vuyCcsKJEAx-QTdRU7ZCeUmBhrlIEFxmYaSc7td1TSNAAPBayYb6H1wKhmFcZVHPAESEQtRmeHBs3Zr8dt7yKbdLgg1uuMyCnSLubAp0v0qrRznmorTXvfTaI240g1zxrokNGiWFlWicTxfslV2EO8_c6_uGLBzApEZaeRk1KDsDkIqsq0y5ToWV1PtygFI0xMXp9xxDKBkTXW5exsQ0JTEp5XLO6jYeWTAhoQ8By4agZKWeICJWlSAmKRo_8FrjByYN5huEb0kCiSomJugYHJBO3Qa32M2R-Ub6lm4SccZGewtvpHJSaupa2jlnwhQBLRLTtekgULs4aL9wMILnWHkziKyq__-LJlmoZiwunxgvUYivw39gIXF18SUc5fembufw8fCNPhHLqO0BSB-DmHx1-Q2RzUsodEi_djlkwb-89UUo-fVkoWQnPbQH5YgtK6qZPOduZmgLsLEJdskgFTOCPSAK9gxZSLeuiYSjc3P13StgMVEHExQVF0bta9hVmI7D_m0fvYOuJWV1GKUBHrSqWzlcYd7wiy2emsfue5pe8ucGktjBDaKFT8hIsNFtaUhpRXdJklv1uhz5bP65qPVJiEE7hZVjc64ftsgI6v0hlMi_KobhiBPa2QOjD2JP3ahY5uPAwlzOOz6hMXMvhJEpwls0-NIb_doCzowBE--4bWeCB_wOAB9t_zerCAMF7Q_gjUNFs7p0fjFuR32_0-ynFmmLMiizJVkwsTRc3z_6xiEeRIdScJKmLQtESdRUnpGK4BrIKhx4c6UadAkf5t-xPdhgKLjgj4FTMgNL6GqbJmFYUwsbWQUkOjU00S59VL0_-53fiqYrvsTgDYbktXWMZuMmD7vPfZkTmbG_jw9F0AKAd-04MGG3JUeD8FjQCXQXOnikTgUY56xBqsyMqXyAOXAucYzgYP3eWktaD6TfUCHkE9xzmMkhzF5pAKs85DCEeZ4-QuMEXKSiyx5rQsnKy_pFdbW1k4buI28VGiEXG641qzicZ5JIvtpCqYlZouFoUtV4tHb8Gya_1svO3Cecq1kyedqMlFydEuPu567V8uyj5DEGVXqFXVVUhFI0xnAgJxvdloUy3-OYMe4g4S5SlZCcTFP0UOjlE-Ev1MiFEVhhuuDDTZJsmKN6OrcCVNtPNuBfHuzxtIfU_Qan1FxcNwWV_QexTRZggPvWpKndbFfvRxTVdcLgCMDttDc8_XoYiX-Txr0Ll6Xu-LyNFKWbvmu3ilKd4Z4NX5m96Qnrqpsqo3-1m
' URL: http://www.plantuml.com/plantuml/uml/jLZBRXit5DthAxYKOmdesWY2EB036B03eKwwARgWPXYLA8USaXoZoEEZ-WtziLvo-BWaHqgKm1jPkk_7kRoaNnjBjPq6iJ9_SJbIJGVI2MhCjRMQxoVBxZeb7_adHdvP_SbxHZgkEy5MAoz5tl2zuCgoZfBFAqAsKWrxpQx88sZBWwFqNBEkuqfYeg6WVKNkkR4l7-7xAqSKVAzLfDwx7vuyCcsKJEAx-QTdRU7ZCeUmBhrlIEFxmYaSc7td1TSNAAPBayYb6H1wKhmFcZVHPAESEQtRmeHBs3Zr8dt7yKbdLgg1uuMyCnSLubAp0v0qrRznmorTXvfTaI240g1zxrokNGiWFlWicTxfslV2EO8_c6_uGLBzApEZaeRk1KDsDkIqsq0y5ToWV1PtygFI0xMXp9xxDKBkTXW5exsQ0JTEp5XLO6jYeWTAhoQ8By4agZKWeICJWlSAmKRo_8FrjByYN5huEb0kCiSomJugYHJBO3Qa32M2R-Ub6lm4SccZGewtvpHJSaupa2jlnwhQBLRLTtekgULs4aL9wMILnWHkziKyq__-LJlmoZiwunxgvUYivw39gIXF18SUc5fembufw8fCNPhHLqO0BSB-DmHx1-Q2RzUsodEi_djlkwb-89UUo-fVkoWQnPbQH5YgtK6qZPOduZmgLsLEJdskgFTOCPSAK9gxZSLeuiYSjc3P13StgMVEHExQVF0bta9hVmI7D_m0fvYOuJWV1GKUBHrSqWzlcYd7wiy2emsfue5pe8ucGktjBDaKFT8hIsNFtaUhpRXdJklv1uhz5bP65qPVJiEE7hZVjc64ftsgI6v0hlMi_KobhiBPa2QOjD2JP3ahY5uPAwlzOOz6hMXMvhJEpwls0-NIb_doCzowBE--4bWeCB_wOAB9t_zerCAMF7Q_gjUNFs7p0fjFuR32_0-ynFmmLMiizJVkwsTRc3z_6xiEeRIdScJKmLQtESdRUnpGK4BrIKhx4c6UadAkf5t-xPdhgKLjgj4FTMgNL6GqbJmFYUwsbWQUkOjU00S59VL0_-53fiqYrvsTgDYbktXWMZuMmD7vPfZkTmbG_jw9F0AKAd-04MGG3JUeD8FjQCXQXOnikTgUY56xBqsyMqXyAOXAucYzgYP3eWktaD6TfUCHkE9xzmMkhzF5pAKs85DCEeZ4-QuMEXKSiyx5rQsnKy_pFdbW1k4buI28VGiEXG641qzicZ5JIvtpCqYlZouFoUtV4tHb8Gya_1svO3Cecq1kyedqMlFydEuPu567V8uyj5DEGVXqFXVVUhFI0xnAgJxvdloUy3-OYMe4g4S5SlZCcTFP0UOjlE-Ev1MiFEVhhuuDDTZJsmKN6OrcCVNtPNuBfHuzxtIfU_Qan1FxcNwWV_QexTRZggPvWpKndbFfvRxTVdcLgCMDttDc8_XoYiX-Txr0Ll6Xu-LyNFKWbvmu3ilKd4Z4NX5m96Qnrqpsqo3-1m
' Generated on: 2025-11-19T13:53:11.574364600

@startuml
skinparam classAttributeIconSize 0
hide circle

class Biblioteca {
  -nombre: String
  -direccion: String
  -salas: List<Sala>
  -libros: List<Libro>
  -personas: List<Persona>
  --
  +Biblioteca(nombre: String, direccion: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getDireccion(): String
  +setDireccion(direccion: String): void
  +getSalas(): List<Sala>
  +getLibros(): List<Libro>
  +getPersonas(): List<Persona>
  +registrarVisita(persona: Persona): void
  +addSala(sala: Sala): void
  +addLibro(libro: Libro): void
  +asignarResponsable(sala: Sala, persona: Persona): void
  +addPersona(persona: Persona): void
  +mostrarInformation(): void
}

class Empleado {
  -puesto: String
  -sueldo: double
  --
  +Empleado(nombre: String, apellido: String, dni: String, edad: int, email: String, telefono: String, puesto: String, sueldo: double)
  +getPuesto(): String
  +setPuesto(puesto: String): void
  +getSueldo(): double
  +setSueldo(sueldo: double): void
  +mostrarInformacion(): void
}

class Libro {
  -titulo: String
  -autor: String
  -isbn: String
  -añoPublicacion: int
  -editorial: String
  -disponible: boolean
  --
  +Libro(titulo: String, autor: String, isbn: String, añoPublicacion: int, editorial: String)
  +getTitulo(): String
  +setTitulo(titulo: String): void
  +getAutor(): String
  +setAutor(autor: String): void
  +getIsbn(): String
  +setIsbn(isbn: String): void
  +getAñoPublicacion(): int
  +setAñoPublicacion(añoPublicacion: int): void
  +getEditorial(): String
  +setEditorial(editorial: String): void
  +isDisponible(): boolean
  +setDisponible(disponible: boolean): void
  +mostrarInformacion(): void
}

class LibroDigital {
  -formato: String
  -tamañoMB: double
  --
  +LibroDigital(titulo: String, autor: String, isbn: String, añoPublicacion: int, editorial: String, formato: String, tamañoMB: double)
  +getFormato(): String
  +setFormato(formato: String): void
  +getTamañoMB(): double
  +setTamañoMB(tamañoMB: double): void
  +mostrarInformacion(): void
}

class LibroFisico {
  -numPaginas: int
  -ubicacion: String
  --
  +LibroFisico(titulo: String, autor: String, isbn: String, añoPublicacion: int, editorial: String, numPaginas: int, ubicacion: String)
  +getNumPaginas(): int
  +setNumPaginas(numPaginas: int): void
  +getUbicacion(): String
  +setUbicacion(ubicacion: String): void
  +mostrarInformacion(): void
}

class Main {
  +{static} main(args: String[]): void
}

class Persona {
  -nombre: String
  -apellido: String
  -dni: String
  -edad: int
  -email: String
  -telefono: String
  --
  +Persona(nombre: String, apellido: String, dni: String, edad: int, email: String, telefono: String)
  +getNombre(): String
  +setNombre(nombre: String): void
  +getApellido(): String
  +setApellido(apellido: String): void
  +getDni(): String
  +setDni(dni: String): void
  +getEdad(): int
  +setEdad(edad: int): void
  +getEmail(): String
  +setEmail(email: String): void
  +getTelefono(): String
  +setTelefono(telefono: String): void
  +mostrarInformacion(): void
}

class Sala {
  -numero: int
  -aforoMaximo: int
  -numeroActualPersonas: int
  -tipo: String
  -responsable: Persona
  --
  +Sala(numero: int, aforoMaximo: int, tipo: String)
  +getNumero(): int
  +setNumero(numero: int): void
  +getAforoMaximo(): int
  +setAforoMaximo(aforoMaximo: int): void
  +getNumeroActualPersonas(): int
  +setNumeroActualPersonas(numeroActualPersonas: int): void
  +getTipo(): String
  +setTipo(tipo: String): void
  +getResponsable(): Persona
  +setResponsable(responsable: Persona): void
  +entrarPersona(): boolean
  +salirPersona(): void
  +mostrarInformacion(): void
}

class SalaEstudio {
  -numMesas: int
  --
  +SalaEstudio(numero: int, aforoMaximo: int, numMesas: int)
  +getNumMesas(): int
  +setNumMesas(numMesas: int): void
  +mostrarInformacion(): void
}

class SalaInformatica {
  -numEquipos: int
  --
  +SalaInformatica(numero: int, aforoMaximo: int, numEquipos: int)
  +getNumEquipos(): int
  +setNumEquipos(numEquipos: int): void
  +mostrarInformacion(): void
}

class SalaLectura {
  -libros: List<Libro>
  --
  +SalaLectura(numero: int, aforoMaximo: int)
  +getLibros(): List<Libro>
  +agregarLibro(libro: Libro): void
  +mostrarInformacion(): void
}

class Usuario {
  -numSocio: String
  -librosPrestados: List<Libro>
  --
  +Usuario(nombre: String, apellido: String, dni: String, edad: int, email: String, telefono: String, numSocio: String)
  +getNumSocio(): String
  +setNumSocio(numSocio: String): void
  +getLibrosPrestados(): List<Libro>
  +prestarLibro(libro: Libro): void
  +devolverLibro(libro: Libro): void
  +mostrarInformacion(): void
}

Biblioteca o-- Sala
Biblioteca o-- Libro
Biblioteca o-- Persona
Empleado --|> Persona
LibroDigital --|> Libro
LibroFisico --|> Libro
Sala *-- Persona
SalaEstudio --|> Sala
SalaInformatica --|> Sala
SalaLectura --|> Sala
SalaLectura o-- Libro
Usuario --|> Persona
Usuario o-- Libro
@enduml